# stocktrading-nifty

./: .gitignore  README.md  nifty_fair_value_PRD.md  pyproject.toml
nifty_fair_value/: requirements.txt
nifty_fair_value/app/: dashboard.py
nifty_fair_value/config/: settings.py.example
nifty_fair_value/data/: data_models.py  groww_client.py  persistence.py
nifty_fair_value/engine/: atm_selector.py  fair_value.py  max_pain.py  oi_metrics.py  oi_weighted.py  options_strategy.py  regime.py  signals.py  synthetic.py
nifty_fair_value/templates/: fairvalue.html
nifty_fair_value/tests/: conftest.py  fixtures.py  test_atm_selector.py  test_fair_value.py  test_max_pain.py  test_oi_metrics.py  test_oi_weighted.py  test_options_strategy.py  test_regime.py  test_signals.py  test_synthetic.py
