[tool.poetry]
name = "stock-trading"
version = "0.1.0"
description = ""
authors = ["kankipati_raja <raja.ram757@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
growwapi = "^1.5.0"
pandas = ">=2.2.3,<3.0.0"
scipy = "^1.17.1"
matplotlib = "^3.10.8"
plotly = "^6.7.0"
flask = "^3.0.0"
pyotp = "^2.9.0"
nest-asyncio = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

[tool.poetry.scripts]
dashboard = "nifty_fair_value.app.dashboard:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
